[WFCORE-7660] Convert the security-manager subsystem to a model-only subsystem
Jira issue: https://redhat.atlassian.net/browse/WFCORE-7660

Signed-off-by: Yeray Borges <yborgess@redhat.com>