@@ -13,21 +13,19 @@ import static org.wildfly.extension.security.manager.Constants.PERMISSION_CLASS;
 import static org.wildfly.extension.security.manager.Constants.PERMISSION_MODULE;
 import static org.wildfly.extension.security.manager.Constants.PERMISSION_NAME;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.jboss.as.controller.AttributeDefinition;
+import org.jboss.as.controller.ModelOnlyAddStepHandler;
+import org.jboss.as.controller.ModelOnlyRemoveStepHandler;
 import org.jboss.as.controller.ObjectListAttributeDefinition;
 import org.jboss.as.controller.ObjectTypeAttributeDefinition;
 import org.jboss.as.controller.PathElement;
 import org.jboss.as.controller.PersistentResourceDefinition;
-import org.jboss.as.controller.ReloadRequiredAddStepHandler;
-import org.jboss.as.controller.ReloadRequiredRemoveStepHandler;
 import org.jboss.as.controller.SimpleAttributeDefinition;
 import org.jboss.as.controller.SimpleAttributeDefinitionBuilder;
 import org.jboss.as.controller.registry.AttributeAccess;
-import org.jboss.dmr.ModelNode;
 import org.jboss.dmr.ModelType;
 
 /**
@@ -63,17 +61,6 @@ class DeploymentPermissionsResourceDefinition extends PersistentResourceDefiniti
     private static final ObjectTypeAttributeDefinition PERMISSIONS_VALUE_TYPE =
             ObjectTypeAttributeDefinition.Builder.of(PERMISSION, CLASS, NAME, ACTIONS, MODULE).build();
 
-    // this was supposed to be the attribute definition's default value, but using it as a default results in an error when
-    // trying to obtain the MBeanInfo for the security manager subsystem because default lists are not supported. The error
-    // message 'Default value not supported for ArrayType and TabularType' is displayed in an exception thrown by the
-    // javax.management.openmbean.OpenMBeanInfoSupport class.
-    static final ModelNode DEFAULT_MAXIMUM_SET;
-    static {
-        final ModelNode defaultPermission = new ModelNode();
-        defaultPermission.get(PERMISSION_CLASS).set("java.security.AllPermission");
-        DEFAULT_MAXIMUM_SET = new ModelNode().add(defaultPermission);
-    }
-
     static final AttributeDefinition MAXIMUM_PERMISSIONS =
             ObjectListAttributeDefinition.Builder.of(Constants.MAXIMUM_PERMISSIONS, PERMISSIONS_VALUE_TYPE)
                     .setRequired(false)
@@ -97,11 +84,11 @@ class DeploymentPermissionsResourceDefinition extends PersistentResourceDefiniti
 
     private DeploymentPermissionsResourceDefinition() {
         super(DEPLOYMENT_PERMISSIONS_PATH, SecurityManagerExtension.getResolver(Constants.DEPLOYMENT_PERMISSIONS),
-                ReloadRequiredAddStepHandler.INSTANCE, ReloadRequiredRemoveStepHandler.INSTANCE);
+                ModelOnlyAddStepHandler.INSTANCE, ModelOnlyRemoveStepHandler.INSTANCE);
     }
 
     @Override
     public Collection<AttributeDefinition> getAttributes() {
-        return Collections.unmodifiableCollection(Arrays.asList(ATTRIBUTES));
+        return List.of(ATTRIBUTES);
     }
 }
